<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignIn">

    // Gradient Background
    <ImageView
        android:id="@+id/sign_in_background"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:contentDescription="TODO"

        android:background="@drawable/gradients"
        />

    // Icon /Logo
    <ImageView
        android:id="@+id/sign_in_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_marginTop="100dp"

        android:layout_centerHorizontal="true"

        app:srcCompat="@drawable/ic_launcher_foreground" />

    // Create an Account Text

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="200dp"
        android:text="Sign Into Account"

        android:textColor="@color/white"

        android:textSize="20dp" />
    // **************************************************************

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sign_in_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            // Email Text
            <TextView
                android:id="@+id/sign_in_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:textColor="@color/grey"
                android:textSize="20dp"

                android:text="Email"
                />

            <EditText
                android:id="@+id/editTextSignInEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:layout_marginTop="70dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                android:background="@drawable/textfield_style"
                android:textColor="@color/grey"

                android:textSize="16dp"
                android:hint="Enter Email Address"
                android:textColorHint="@color/grey2"

                android:inputType="textEmailAddress"
                />
            // **************************************************************

            // Password Text
            <TextView
                android:id="@+id/sign_in_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="130dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:textColor="@color/grey"
                android:textSize="20dp"

                android:text="Password"
                />

            <EditText
                android:id="@+id/editTextSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:layout_marginTop="170dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                android:background="@drawable/textfield_style"
                android:textColor="@color/grey"

                android:textSize="16dp"
                android:hint="Enter Password"
                android:textColorHint="@color/grey2"

                android:inputType="textPassword"
                />
            // **************************************************************

            // Register Button
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="100dp"
                android:layout_height="40dp"

                android:layout_marginTop="390dp"
                android:layout_marginBottom="30dp"

                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"

                android:background="@drawable/button_style"
                style="@style/Widget.AppCompat.Button"

                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>