<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUp2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Profile Picture Text -->
            <TextView
                android:id="@+id/sign_up_profile_picture_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:textColor="@color/grey"
                android:textSize="20sp"

                android:text="Profile Picture"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="350dp"
                app:cardCornerRadius="12dp"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                >

                <ImageView
                    android:id="@+id/sign_up_profile_picture_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:scaleType="centerCrop"

                    android:background="@drawable/image_style"
                    android:src="@drawable/add_dp"
                    />
            </androidx.cardview.widget.CardView>

            <!-- Name Text -->
            <TextView
                android:id="@+id/sign_up_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="440dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:textColor="@color/grey"
                android:textSize="20sp"

                android:text="Full Name"
                />

            <EditText
                android:id="@+id/editTextSignUpName"
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:layout_marginTop="480dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                android:background="@drawable/textfield_style"
                android:textColor="@color/grey"

                android:textSize="16sp"
                android:hint="Enter Name"
                android:textColorHint="@color/grey2"

                android:inputType="text"
                />

            <!-- Birthday Text -->
            <TextView
                android:id="@+id/sign_up_birthday_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="540dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:textColor="@color/grey"
                android:textSize="20sp"

                android:text="Birthday"
                />

            <TextView
                android:id="@+id/sign_up_birthday_text2"
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:layout_marginTop="580dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                android:background="@drawable/textfield_style"
                android:textColor="@color/grey"
                android:textSize="16sp"

                android:hint="Select Date"
                android:textColorHint="@color/grey2"
                android:gravity="center_vertical"
                />

            <!-- Gender Text -->
            <TextView
                android:id="@+id/sign_up_gender_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="640dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:textColor="@color/grey"
                android:textSize="20sp"

                android:text="Gender"
                />


            <TextView
            android:id="@+id/sign_up_gender_text2"
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:layout_marginTop="680dp"
            android:layout_marginLeft="50dp"
            android:layout_centerHorizontal="true"

            android:paddingLeft="15dp"
            android:paddingRight="15dp"

            android:background="@drawable/textfield_style"
            android:textColor="@color/grey" android:textSize="16dp"

            android:hint="Select Gender"
                android:textColorHint="@color/grey2"
            android:gravity="center_vertical"
            />

            <!-- Preference Text -->
            <TextView
                android:id="@+id/sign_up_preference_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="740dp"

                android:text="Attracted To?"
                android:textColor="@color/grey"

                android:textSize="20dp" />
            <TextView
                android:id="@+id/textErrorSign2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_up_birthday_text2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"


                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/sign_up_preference_text2"
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:layout_marginTop="780dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                android:background="@drawable/textfield_style"
                android:textColor="@color/grey"
                android:textSize="16sp"

                android:hint="Select Preference"
                android:textColorHint="@color/grey2"
                android:gravity="center_vertical"
                />

            <!-- Bio Text -->
            <TextView
                android:id="@+id/sign_up_bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="840dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"

                android:textColor="@color/grey"
                android:textSize="20sp"

                android:text="Bio"
                />

            <EditText
                android:id="@+id/editTextSignUpBio"
                android:layout_width="match_parent"
                android:layout_height="90dp"

                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="880dp"
                android:paddingTop="5dp"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"

                android:background="@drawable/textfield_style"
                android:textSize="16sp"

                android:gravity="top"
                android:maxLines="5"
                android:inputType="textMultiLine"

                android:hint="Tell us something about yourself..."
                android:textColorHint="@color/grey2"

                android:paddingRight="15dp"
                android:textColor="@color/grey" />



            <!-- Register Button -->
            <Button
                android:id="@+id/sign_up_register_button"
                android:layout_width="100dp"
                android:layout_height="40dp"

                android:layout_marginTop="1050dp"
                android:layout_marginBottom="30dp"

                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"

                android:background="@drawable/button_style"
                style="@style/Widget.AppCompat.Button"

                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="Register"
                />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextSignUpBio"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"

                android:text="I confirm that I am above the age of 18."
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:buttonTint="@color/blue"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>